# core

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.md  README.rst  appveyor.yml  dvlpt_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  travis.yml
.github/workflows/: conda-package-build.yml
.pkglts/: pkg_cfg.json  pkg_hash.json
conda/: meta.yaml
doc/: conf.py  environment.yml  index.rst  installation.rst  readme.rst  usage.rst
doc/_dvlpt/: modules.rst  openalea.core.algo.rst  openalea.core.control.rst  openalea.core.formatting.rst  openalea.core.graph.interface.rst  openalea.core.graph.rst  openalea.core.interpreter.rst  openalea.core.plugin.builtin.rst  openalea.core.plugin.formatting.rst  openalea.core.plugin.rst  openalea.core.project.formatting.rst  openalea.core.project.rst  openalea.core.rst  openalea.core.scene.rst  openalea.core.service.rst  openalea.core.system.rst  openalea.core.world.rst  openalea.rst
doc/user/: index-bckup.rst  manual.rst
src/openalea/core/: __init__.py  alea.py  category.py  color_palette.py  compositenode.py  customexception.py  data.py  data_manager.py  dataflow.py  dataflow_state.py  datapool.py  export_app.py  factory_parser.py  funcsigs.py  interface.py  logger.py  manager.py  metaclass.py  metadatadict.py  model.py  model_inout.py  node.py  path.py  (+16 more)
test/: small_tools.py  test_alias.py  test_compositenode.py  test_control.py  test_data.py  test_dataflow.py  test_dataflow_evaluation.py  test_dataflow_state.py  test_eval.py  test_export.py  test_factory_decorator.py  test_funcsigs.py  test_interface.py  test_interpreter.py  test_lambda.py  test_log.py  test_model.py  test_nocasedict.py  test_node.py  test_observer.py  test_old_model.py  test_package.py  test_packagemanager.py  test_persistence.py  test_pluginmanager.py  test_project.py  test_project_manager.py  test_property_graph.py  test_pseudopackage.py  test_python_model.py  test_run_python_model.py  test_service_data.py  test_service_interface.py  test_service_model.py  test_session.py  test_signature.py  test_srcedit.py  test_wralea.py  testnodes.py
test/gui/: test_export.py
test/pkg/: nodes.py
(+49 files in other folders)
